# crisp

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: compatibility_checks.yml
constraints/: min.txt
crisp/: core.py  interaction_rates.py  photonuclear_cross_sections.py
crisp-py/: UHECR_statistics.py  continuous_losses.py  requirements.txt
crisp_py/: background_photon_models.py  core.py  interaction_rates.py
data/: Andrews18_splinterp.pkl  Gilmore12_splinterp.pkl  PSB1976.csv  SaldanaLopez21_splinterp.pkl  SimProp_models_M0_M1_M2.csv  SimProp_models_M0_M1_M2.txt  isotope_relative_abundances.csv  nubase2016.txt  nucleardecays.py  xsect_BreitWigner2_TALYS-1.6.txt  xsect_BreitWigner_TALYS-1.0.txt  xsect_BreitWigner_TALYS-1.6.txt  xsect_Gauss2_TALYS-restored.txt
data/gdr_parameters_exp&systematics/: gdr-parameters_exp&systematics_slo&smlo.readme
examples/: Atomic_abundances.csv  Chemical_abundances.csv  Cross_Sections.ipynb  Injection_composition.ipynb  Nuclear_Decays.ipynb  Single_events_analysis.ipynb  SourceExample.ipynb
src/: UHECR_statistics.py  background_photon_models.py  continuous_losses.py  core.py  interaction_rates.py  photonuclear_cross_sections.py  source_models.py
tests/: Comparing_distributions_to_CRPropa.ipynb  test_minimal.py
