[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp-py"  # PyPI name can have hyphens
version = "0.1.0"
description = "Cosmic Ray Stochastic Interactions for Propagation"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Leonel Morejon", email = "leonel.morejon@uni-wuppertal.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=5.0",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "pint>=0.18",
    "sympy>=1.9",
    "matplotlib>=3.4",  # From requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "nbsphinx>=0.8",
]

[project.urls]
Homepage = "https://github.com/mohller/crisp"
"Bug Tracker" = "https://github.com/mohller/crisp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crisp*"]
